为追溯版本，加入编译时间

--- a/README.adoc
+++ b/README.adoc
@@ -8,5 +8,14 @@ $ make clean
 $ make
 ----
 
+== Get devicetree version
+
+[source,]
+----
+$ cat /proc/device-tree/dt_ver/build_time
+$ cat /proc/device-tree/dt_ver/commit
+$ cat /proc/device-tree/dt_ver/builder
+----
+
 
 
