--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
 == How To Build
 
+image:https://travis-ci.org/onealtom/dt_build.svg?branch=master["Build Status", link="https://travis-ci.org/onealtom/dt_build"]
+
 [source,]
 ----
 $ ./dtc --veriosn
